[package]
name = "pilatus-opencv"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
minfac = "0.1.1"
opencv = { version= "0.94.1", features = ["clang-runtime"] }
pilatus = { git = "https://github.com/mineichen/pilatus.git", branch = "main", features = ["tokio"] }
pilatus-engineering = { git = "https://github.com/mineichen/pilatus.git", branch = "main", features = ["image"] }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.43.0", features = ["sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
#itertools = "0.13"