[workspace]
resolver = "2"

members = [
  "pilatus-opencv"
]

[workspace.dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
image = { version = "0.25", default-features = false, features = [
  "png",
]}
minfac = "0.1"
opencv = { version= "0.94.1", default-features = false, features = [ "calib3d", "imgcodecs", "imgproc", "objdetect"] }
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1"
tracing = "0.1"
uuid = "1"
