[package]
name = "pilatus-opencv-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
minfac = { workspace = true }
opencv = { version= "0.94.1", features = ["clang-runtime"] }
pilatus = { git = "https://github.com/mineichen/pilatus.git", branch = "main", features = ["tokio"] }
pilatus-engineering = { git = "https://github.com/mineichen/pilatus.git", branch = "main", features = ["image"] }
pilatus-opencv = { path = "../pilatus-opencv" }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.43.0", features = ["sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { workspace = true }