[package]
name = "pilatus-opencv"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
opencv = { workspace = true }
pilatus = { git = "https://github.com/mineichen/pilatus.git", branch = "main" }
pilatus-engineering = { git = "https://github.com/mineichen/pilatus.git", branch = "main", features = ["image"] }
rayon = "1.10.0"
serde = { workspace = true }
thiserror = "2"
tracing = { workspace = true }

[dev-dependencies]
opencv = { workspace = true, features = ["clang-runtime"] }